# console_ppt

./: AGENTS.md  GEMINI.md  README.md  pyproject.toml
console_ppt/: __init__.py  config.py  main.py  parser.py  widgets.py
example/: .console_ppt.yaml  animation_demo.md  console_ppt.yaml  demo.md  hide_global_progress_demo.md  hideprogress_demo.md  html_demo.md  nested_demo.md  new_features_demo.md  style_align_demo.md  valign_demo.md
